# E-commerce-Backend

./: .coverage  .gitignore  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py
catalog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
orders/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py
